--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Chatbot</title>
 </head>
 <body>
-    <script async src="https://api.lindy.ai/api/lindyEmbed/lindyEmbed.js?a=b873b8ea-55d6-4cbc-b698-269bc38edb75" crossorigin="anonymous"></script>
+    <script async src="https://api.lindy.ai/api/lindyEmbed/lindyEmbed.js?a=b873b8ea-55d6-4cbc-b698-269bc38edb75" crossorigin="use-credentials"></script>
 </body>
 </html>
