--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Chatbot</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lindy AI Chatbot Test</title>
 </head>
 <body>
-    <script async src="https://api.lindy.ai/api/lindyEmbed/lindyEmbed.js?a=b873b8ea-55d6-4cbc-b698-269bc38edb75" crossorigin="use-credentials"></script>
+    <h1>Lindy AI Chatbot Test</h1>
+    
+    <script async src="https://api.lindy.ai/api/lindyEmbed/lindyEmbed.js?a=b873b8ea-55d6-4cbc-b698-269bc38edb75" crossorigin="anonymous"></script>
 </body>
 </html>
