--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Lindy AI Chatbot Test</h1>
     
-<script async src="https://api.lindy.ai/api/lindyEmbed/lindyEmbed.js?a=b873b8ea-55d6-4cbc-b698-269bc38edb75" crossorigin="use-credentials"></script>
+<iframe src="https://chat.lindy.ai/embedded/lindyEmbed/b873b8ea-55d6-4cbc-b698-269bc38edb75" width="100%" height="600px" style="border: none" title="Lindy Embed"></iframe>
 </body>
 </html>
