--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Lindy AI Chatbot Test</title>
 </head>
 <body>    
-<iframe src="https://chat.lindy.ai/embedded/lindyEmbed/36bbb326-0d05-4c0a-8f5b-77534ef67903" width="100%" height="100%" style="border: none" title="Lindy Embed"></iframe>
+<iframe src="https://chat.lindy.ai/embedded/lindyEmbed/36bbb326-0d05-4c0a-8f5b-77534ef67903" width="100%" height="600px" style="border: none" title="Lindy Embed"></iframe>
 </body>
 </html>
